--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/payroll_style.css" >
+    <link rel="stylesheet" href="../css/payroll_style.css">
     <title>Employee payroll form</title>
+    <script defer src="../js/payroll_script.js"></script>
 </head>
 <body>
     <header class="header-content header">
