[Umesh]Added: linked employee payroll data file to the html file

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/payroll_style.css">
     <title>Employee payroll form</title>
+    <script defer src="../js/EmployeePayrollData.js"></script>
     <script defer src="../js/payroll_script.js"></script>
 </head>
 <body>
@@ -134,6 +135,7 @@
                         <option value="2017">2017</option>
                         <option value="2016">2016</option>
                     </select>
+                    <error-output class="date-error" for="startDate"></error-output>
                 </div>
             </div>
             <div class="row-content">
